# freelaw

./: .gitignore  README.md  pyproject.toml
event_api/: .env.example  db.sqlite3  manage.py
event_api/api/: signals.py  tests.py
event_api/api/migrations/: 0001_initial.py  0002_event_attendees.py  0003_remove_event_attendees.py  0004_eventregistration.py  0005_eventregistration_created_at_and_more.py
event_api/api/models/: __init__.py  event_models.py  event_registration_models.py
event_api/api/serializers/: event_serializers.py  user_serializers.py
event_api/api/tasks/: send_email_tasks.py
event_api/api/urls/: event_registration_urls.py  event_report_urls.py  event_urls.py  urls.py  user_urls.py
event_api/api/views/: event_registration_views.py  event_report_views.py  event_views.py  user_views.py
event_api/event_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
